--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <center>
             <h1>soon....</h1>
             <center>
+                <p>hello everyone. stay safe</p>
+                <br>
+                <br>
+                </p>we will meet you soon</p>
           
     <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=hackerworld.me','SiteLock','width=600,height=600,left=160,top=170');" ><img class="img-fluid" alt="SiteLock" title="SiteLock" src="https://shield.sitelock.com/shield/hackerworld.me" /></a>
     
