my first commit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Merry Cristmas</title>
+    </head>
+    <body>
+        <center><h1>MERRY CRISTMAS FOR EVERY ONE</h1></center>
+        <br>
+        <a href="./sammy-merry-christmas-1.png" alt="img" height="100" width="100">Merry
+            Cristmas</a>
+        </a>
+        <h3>HELLO EVERY ONE</h3>
+        <br>
+        <h1>THIS WEBSITE  UNDER MAINTENANCE </h1>
+        <br>
+        <h2>new announcement will be launch 25.12.2022</h2>
+    </body>
 </html>
-<body>
-    <center>
-        <h2>Under Maintenance</h2>
-    </center>         
-    <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=hackerworld.me','SiteLock','width=20,height=20,left=160,top=170');" ><img class="img-fluid" alt="SiteLock" title="SiteLock" src="https://shield.sitelock.com/shield/hackerworld.me" /></a>
-    
-</body>
