my first commit

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <body>
         <center><h1>MERRY CRISTMAS FOR EVERY ONE</h1></center>
         <br>
-        <a href="./sammy-merry-christmas-1.png" alt="img" height="100" width="100">Merry
-            Cristmas</a>
-        </a>
+        <center>
+        <img src="./sammy-merry-christmas-1.png" alt="img" height="100" width="100">
+        </center>
         <h3>HELLO EVERY ONE</h3>
         <br>
         <h1>THIS WEBSITE  UNDER MAINTENANCE </h1>
