my first commit

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <title>Merry Cristmas</title>
     </head>
     <body>
+        <bg image="./nature.jpg" alt="img"></bg>"
         <center><h1>MERRY CRISTMAS FOR EVERY ONE</h1></center>
         <br>
         <center>
-        <img src="./sammy-merry-christmas-1.png" alt="img" height="100" width="100">
+        <img src="./sammy-merry-christmas-1.png" alt="img" height="200" width="200">
         </center>
         <h3>HELLO EVERY ONE</h3>
         <br>
