--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welocme</title>
+        <title><target>Merry Cristmas</target></title>
     </head>
     <body>
-        <h1>Welcome Everyone</h1>
+        <style>
+            body {
+                background-image: url("./snowman-g45e0486dc_1920.jpg");
+            }
+        </style>
+        <br>
+        <center>
+        <h1>MERRY CRISTMAS</h1></center>
+        <br>
+        <h2>Under maintenance</h2>
+
+
     </body>
 </html>
