--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title><target>Merry Cristmas</target></title>
+        <title>Welcome</title>
     </head>
     <body>
         <style>
             body {
-                background-image: url("./snowman-g45e0486dc_1920.jpg");
+                background-color:black;
             }
         </style>
         <br>
         <center>
-        <h1>MERRY CRISTMAS</h1></center>
+        <h1>Welcome My website</h1></center>
         <br>
-        <h2>Under maintenance</h2>
+        <h2>Currently this site Under maintenance</h2>
+        <br>
+        <br>
+        <br>
+        <h2>First January 2023 will ready to new announcement</h2>
 
 
     </body>
