--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         </style>
         <br>
         <center>
-        <h1>Welcome My website</h1></center>
+        <h1><font color=white>Welcome My website</font></h1></center>
         <br>
-        <h2>Currently this site Under maintenance</h2>
+        <h2><font color=white>Currently this site Under maintenance</font></h2>
         <br>
         <br>
         <br>
-        <h2>First January 2023 will ready to new announcement</h2>
+        <h2><font color="white">First January 2023 will ready to new announcement</font></h2>
 
 
     </body>
